[package]
name = "tariff-shield"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Soroban customs-bond collateral escrow contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
